# discard-while

./: Cargo.toml  README.md
src/: lib.rs
